GeneWeb version 3.10
--------------------

* GeneWeb server or CGI (gwd)
  - [24 Nov 00] Fixed bug: in automatic merge steps, the data base was
    not locked, risking to corrupt the data base if two persons were making
    changes exactly at the same time.
  - [18 Nov 00] Fixed bug: while updating a person or a family, in
    case of keys (first name/surname/number) conflicts, if there where
    empty spaces (for example the ones of persons to be removed from the
    list), the button "create" supposed to try again with the first free
    number did not work.
  - [16 Nov 00] Fixed bug: in languages with declinations (e.g. German)
    some declinations structures sometimes incorrectly remained in the
    displayed text (e.g. "xx ist ein:d:+em Cousin")
  - [11 Nov 00] When updating, display now a warning in case when the
    person has a sex inconsistent with his/her "relation" (e.g. woman
    being godfather or man being godmother). Can now change a wrong or
    undefined sex according to these "relations". The same changes have
    been done in gwc (GeneWeb uncompiler) and in ged2gwb (GEDCOM to
    GeneWeb). Code written by Ludovic Ledieu.
  - [10 Nov 00] Fixed bug: when merging two persons, if the second one was
    a witness of a marriage, the "witness" link dispeared.
  - [09 Nov 00] Fixed bug: under Windows, the history of updates did not
    work.
  - [08 Nov 00] Added the ability to have associated HTML pages and
    images. The request "base?m=SRC;v=xxx" displays the file
    "src/base/xxx.txt" (interpreting the macros if any). The request
    "base?m=IM;s=yyy" displays the image file "src/base/images/yyy" or
    "src/images/yyy". Code written by Ludovic Ledieu.
  - [08 Nov 00] Fixed bug: when giving 0 as Sosa number, it did not
    answer (infinite loop in gwd).

* GeneWeb uncompiler (gwu)
  - [16 Nov 00] Fixed bug: in some circumstances, relations could be
    printed several times, resulting of several definitions and therefore
    errors when using gwc.